[tool.poetry]
name = "strava-gpx-merge"
version = "0.1.0"
description = "merge the tracks from multiple GPX files into a single GPX and single GeoPackage file"
authors = ["Brian Kelly <polymonic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
geopandas = "^0.13.2"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pylint = "^2.17.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
